--- a/CANADA 150_scenario4.html
+++ b/CANADA 150_scenario4.html
@@ -12,8 +12,8 @@
 <body>
 <div class="topnav" id="myTopnav">
   <center>
-      <a href="CANADA 150.html"> About </a>
-      <a href="CANADA 150.html">Game</a>
+      <a href="index.html"> About </a>
+      <a href="index.html">Game</a>
       <a href="#resources">Resources</a>
       <a href="#contact">Contact Us</a>
     </center>
